tried to fix overlap issue

--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,7 @@ body {
     overflow-y: scroll;
     border-radius: 5px;
     word-wrap: break-word;
+    white-space: nowrap;
 }
 
 .App::-webkit-scrollbar {
